# cheetah-universal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/LibOpenAI/: CMakeLists.txt  LibOpenAI.cpp
src/LibOpenAI/include/: ChatMessage.h  ImageGeneration.h  LibOpenAI.h  OpenAI.h  OpenAIEndpoint.h  OpenAIHelper.h  OpenAIModelType.h
src/LibWhisper/: CMakeLists.txt  WhisperStream.cpp  stream.cpp
src/LibWhisper/include/: CaptureDevice.h  LibWhisper.h  WhisperStream.h  common-sdl.h  common.h  stream.h
src/cheetah-app/: CMakeLists.txt  ModelDownloader.cpp  cheetah-app.cpp
src/cheetah-app/include/: BrowserExtension.h  ConversationAnalyzer.h  ModelDownloader.h  ModelInput.h  OpenAIExecutor.h  PromptChain.h  PromptGenerator.h
